# Albot

./: .gitignore  README.md  docker-compose.yml
NLUmodule/: README.md  config.yml  domain.yml  events.db  rasa.db
NLUmodule/data/: nlu.yml  stories.yml
backend/: .gitignore  Dockerfile  Dockerfile1  README.md  pyproject.toml  requirements.txt
backend/NLUmodule/: config.yml  domain.yml
backend/NLUmodule/data/: nlu.yml
backend/docs/source/: albot_backend.rst  conf.py  index.rst  intro.rst
backend/logs/: albot_click_messages_count.csv  scriptino.py
backend/logs/chat/: AlfredNobel-chat-23-06-2021-12:30:59.json  CarolineHerschel-chat-23-06-2021-12:58:22.json  DimitriMendeleev-chat-23-06-2021-10:41:59.json  FlorenceNightingale-chat-23-06-2021-13:17:25.json  GalileoGalilei-chat-23-06-2021-14:28:57.json  HeinrichHertz-chat-23-06-2021-11:03:27.json  IsaacNewton-chat-23-06-2021-10:08:47.json  JohnDalton-chat-23-06-2021-12:07:09.json  LiseMeitner-chat-23-06-2021-13:10:06.json  MarieCurie-chat-23-06-2021-10:23:25.json  NielsBohr-chat-23-06-2021-11:51:08.json  Pythagoras-chat-23-06-2021-15:22:19.json  RobertBunsen-chat-23-06-2021-14:47:14.json  SophieGermain-chat-23-06-2021-15:08:28.json
backend/logs/chatless/: AlessandroVolta-chatless-23-06-2021-12:28:05.json  AlexanderFleming-chatless-23-06-2021-11:15:04.json  EmmyNoether-chatless-23-06-2021-10:07:58.json  GraceHopper-chatless-23-06-2021-12:47:53.json  GregorMendel-chatless-23-06-2021-12:13:36.json  JamesWatt-chatless-23-06-2021-10:23:04.json  JaneGoodall-chatless-23-06-2021-14:48:34.json  JohannesKepler-chatless-23-06-2021-13:06:15.json  LeonardodaVinci-chatless-23-06-2021-15:09:48.json  MaxPlanck-chatless-23-06-2021-14:32:55.json  NicolausCopernicus-chatless-23-06-2021-11:54:24.json  RachelCarson-chatless-23-06-2021-10:57:56.json  RosalindFranklin-chatless-23-06-2021-10:40:14.json  TychoBrahe-chatless-23-06-2021-15:25:15.json
backend/resources/: inform_classification.json  ingredients_list.json  question_classification.json  trial.json  utterances.json
backend/src/: app.py  dialogue_manager.py  enum_encoder.py  inform_handler.py  model_extractor.py  question_handler.py  state.py  state_machine.py
backend/src/albot_backend/: app.py  dialogue_manager.py  enum_encoder.py  inform_handler.py  model_extractor.py  question_handler.py  state.py  state_machine.py
backend/test/: test_dialogue_manager.py
preprocessing_data/: data_template
preprocessing_data/nlu_md/: output_converted.yml
preprocessing_data/nlu_md/output/train/: output.md
preprocessing_data/nlu_md/train/: output.md
vue_app/: .env  README.md  package-lock.json  package.json
vue_app/src/: App.vue  main.js
vue_app/src/assets/: app.css  backgrounds.css  items.css
vue_app/src/assets/fonts/: stylesheet.css
vue_app/src/components/: Chat.vue  FinalScreen.vue  GameScreen.vue  HelloWorld.vue  IdentificationBackground.vue  IdentificationPhase.vue  MainScreen.vue  MixerBackground.vue  MixerPhase.vue  Phase1.vue  Phase2.vue  Phase3.vue  PickerBackground.vue  PickerPhase.vue  PickerPracticePhase.vue  PracticeBackground.vue  PracticePhase.vue  ReportWindow.vue  SettingsWindow.vue  ShelfBackground.vue  SolutionBackground.vue  TableBackground.vue
vue_app/src/resources/: colors.json  instructions.json  phases.json  substances.json
vue_app/src/store/: index.js
