[tool.poetry]
name = "albot-backend"
version = "0.1.0"
description = "Backend for Albot, a multimodal chatbot. Leverages a socket implementation to manage the client-server communication. Uses Rasa NLU to process textual input, and mere result with the basic interface input processing through a state machine."
authors = ["massimilianonigro <massimiliano.nigro@mail.polimi.it>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
absl-py = "0.10.0"
aio-pika = "6.7.1"
aiofiles = "0.6.0"
aiohttp = "3.6.3"
aiormq = "3.3.1"
appdirs = "1.4.4"
appnope = "0.1.2"
APScheduler = "3.6.3"
argon2-cffi = "20.1.0"
astroid = "2.4.2"
astunparse = "1.6.3"
async_generator = "1.10"
async-timeout = "3.0.1"
attrs = "20.2.0"
backcall = "0.2.0"
black = "20.8b1"
bleach = "3.2.1"
boto3 = "1.16.26"
botocore = "1.19.26"
cachelib = "0.1.1"
cachetools = "4.1.1"
certifi = "2020.11.8"
cffi = "1.14.4"
cloudpickle = "1.4.1"
colorclass = "2.2.0"
coloredlogs = "14.0"
colorhash = "1.0.2"
cryptography = "3.2.1"
Cycler = "0.10.0"
decorator = "4.4.2"
defusedxml = "0.6.0"
distlib = "0.3.1"
dm-tree = "0.1.5"
dnspython = "1.16.0"
docopt = "0.6.2"
entrypoints = "0.3"
fbmessenger = "6.0.0"
filelock = "3.0.12"
Flask = "1.1.2"
Flask-Session = "0.3.2"
Flask-SocketIO = "4.3.1"
gast = "0.3.3"
gevent = "20.9.0"
gevent-websocket = "0.10.1"
google-auth = "1.23.0"
google-auth-oauthlib = "0.4.2"
google-pasta = "0.2.0"
greenlet = "0.4.17"
grpcio = "1.33.2"
h11 = "0.9.0"
h5py = "2.10.0"
httpcore = "0.11.1"
httptools = "0.1.1"
httpx = "0.15.4"
humanfriendly = "9.0"
ipykernel = "5.3.4"
ipython = "7.19.0"
ipython_genutils = "0.2.0"
isort = "5.6.4"
itsdangerous = "1.1.0"
jedi = "0.17.2"
Jinja2 = "2.11.2"
jmespath = "0.10.0"
joblib = "0.15.1"
json5 = "0.9.5"
jsonpickle = "1.4.2"
jsonschema = "3.2.0"
jupyter-client = "6.1.7"
jupyter-core = "4.7.0"
jupyterlab = "2.2.9"
jupyterlab-pygments = "0.1.2"
jupyterlab-server = "1.2.0"
kafka-python = "2.0.2"
Keras-Preprocessing = "1.1.2"
kiwisolver = "1.3.1"
lazy-object-proxy = "1.4.3"
Markdown = "3.3.3"
matplotlib = "3.3.3"
mattermostwrapper = "2.2"
mccabe = "0.6.1"
mistune = "0.8.4"
multidict = "4.7.6"
mypy-extensions = "0.4.3"
nbclient = "0.5.1"
nbconvert = "6.0.7"
nbformat = "5.0.8"
nest-asyncio = "1.4.3"
networkx = "2.5"
notebook = "6.1.5"
numpy = "1.18.5"
oauth2client = "4.1.3"
opt-einsum = "3.3.0"
packaging = "20.7"
pamqp = "2.3.0"
pandas = "1.2.3"
pandocfilters = "1.4.3"
parso = "0.7.1"
pathspec = "0.8.1"
pbr = "5.5.1"
pexpect = "4.8.0"
pickleshare = "0.7.5"
Pillow = "8.0.1"
plotly = "4.14.3"
prometheus-client = "0.9.0"
prompt-toolkit = "2.0.10"
protobuf = "3.14.0"
psycopg2-binary = "2.8.6"
ptyprocess = "0.6.0"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pycparser = "2.20"
pydot = "1.4.1"
Pygments = "2.7.3"
pykwalify = "1.7.0"
pylint = "2.6.0"
pymongo = "3.10.1"
pyparsing = "2.4.7"
pyrsistent = "0.17.3"
python-crfsuite = "0.9.7"
python-engineio = "3.13.2"
python-socketio = "4.6.0"
python-telegram-bot = "12.8"
pytz = "2020.4"
pyzmq = "20.0.0"
questionary = "1.5.2"
rasa = "2.1.2"
rasa-sdk = "2.1.2"
redis = "3.5.3"
regex = "2020.9.27"
requests = "2.25.0"
requests-oauthlib = "1.3.0"
requests-toolbelt = "0.9.1"
retrying = "1.3.3"
rfc3986 = "1.4.0"
rocketchat-API = "1.9.1"
rsa = "4.6"
"ruamel.yaml" = "0.16.12"
"ruamel.yaml.clib" = "0.2.2"
s3transfer = "0.3.3"
sanic = "20.9.0"
Sanic-Cors = "0.10.0.post3"
sanic-jwt = "1.4.1"
Sanic-Plugins-Framework = "0.9.4.post1"
scikit-learn = "0.23.2"
scipy = "1.5.4"
Send2Trash = "1.5.0"
sentry-sdk = "0.19.4"
sklearn-crfsuite = "0.3.6"
slackclient = "2.9.3"
sniffio = "1.2.0"
SQLAlchemy = "1.3.20"
stevedore = "3.2.2"
tabulate = "0.8.7"
tensorboard = "2.4.0"
tensorboard-plugin-wit = "1.7.0"
tensorflow = "2.3.1"
tensorflow-addons = "0.11.2"
tensorflow-estimator = "2.3.0"
tensorflow-hub = "0.9.0"
tensorflow-probability = "0.11.1"
tensorflow-text = "2.3.0"
termcolor = "1.1.0"
terminado = "0.9.1"
terminaltables = "3.1.0"
testpath = "0.4.4"
threadpoolctl = "2.1.0"
toml = "0.10.2"
tornado = "6.1"
tqdm = "4.50.2"
traitlets = "5.0.5"
twilio = "6.45.4"
typed-ast = "1.4.2"
typeguard = "2.10.0"
typing-extensions = "3.7.4.3"
tzlocal = "2.1"
ujson = "3.2.0"
urllib3 = "1.26.2"
uvloop = "0.15.2"
virtualenv = "20.2.1"
virtualenv-clone = "0.5.4"
virtualenvwrapper = "4.8.4"
wcwidth = "0.2.5"
webencodings = "0.5.1"
webexteamssdk = "1.6"
websockets = "8.1"
Werkzeug = "1.0.1"
wrapt = "1.12.1"
yarl = "1.5.1"
"zope.event" = "4.5.0"
"zope.interface" = "5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
