[tool.poetry]
name = "albot-backend"
version = "0.1.0"
description = "Backend for Albot, a multimodal chatbot. Leverages a socket implementation to manage the client-server communication. Uses Rasa NLU to process textual input, and mere result with the basic interface input processing through a state machine."
authors = ["massimilianonigro <massimiliano.nigro@mail.polimi.it>"]
[tool.poetry.scripts]
albot = "albot_backend.app:main"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
asyncio = "^3.4.3"
rasa = "2.1.2"
websockets = "8.1"

[tool.poetry.dev-dependencies]
black = "^21.5b0"
docker = "^5.0.0"
docker-compose = "^1.29.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
